--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ ods_data_fusion_2024/data/
 ods_data_fusion_2024/opendatascience_logo.jpeg
 ods_data_fusion_2024/rnn_andvanced/baseline/checkpoints/
 ods_data_fusion_2024/rnn_andvanced/baseline/processed_chunk/
+
+
+NLP/kinopoisk.jsonl
