--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ ods_data_fusion_2024/rnn_andvanced/baseline/processed_chunk/
 NLP/kinopoisk.jsonl
 
 #data
-NER/data/articles.xlsx
+NER/data/выгрузка_артикулов.xlsx
 
 
